# BoT-SORT

./: pyproject.toml
fast_reid/: fast_reid_interfece.py
tools/: mc_demo.py
