[tool.poetry]
name = "bot-sort"
version = "0.1.0"
description = ""
authors = ["nobu-g <ueda-n127@hotmail.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "~1.23.2"
torch = "~1.11.0"
torchvision = "^0.12.0"
yacs = "^0.1.8"
motmetrics = "^1.4.0"
pyyaml = "^6.0.1"
scikit-learn = "^1.3.2"
Cython = "^0.29.30"
panopticapi = { git = "https://github.com/cocodataset/panopticapi.git" }
cython-bbox = "^0.1.5"
opencv-python = "4.5.5.64"
loguru = "^0.7.2"
thop = "^0.1.1.post2209072238"
pycocotools = "^2.0.7"
tabulate = "^0.9.0"
lap05 = "^0.5.1"
termcolor = "^2.4.0"
tensorboard = "~2.12.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
